add the code from stackblitz

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+/* Add application styles & imports to this file! */
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+body {
+  font-family: 'Lato';
+}
+
+::selection {
+  background: #b7ffc1; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: #b7ffc1; /* Gecko Browsers */
+}
